[tool.poetry]
name = "terry-platform"
version = "0.1.0"
description = ""
authors = ["taeil <jty0234@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
pydantic = "^1.9.1"
requests = "^2.28.0"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
